--- a/assets/css/newprofile.css
+++ b/assets/css/newprofile.css
@@ -66,7 +66,7 @@ top: 4px;
   /* position: static; */
 }
 .sidebar2{
-    background-color: rgb(77, 30, 115);
+    background-color: rgb(130, 197, 238);
     position: relative;
     height: 130vh;
     right: 5px;
@@ -218,7 +218,7 @@ cursor: pointer;
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   }
   .container2::-webkit-scrollbar-thumb {
-    background-color: rgb(126, 245, 203);
+    /* background-color: rgb(255, 255, 255); */
     outline: 1px solid slategrey;
   }
   
@@ -305,6 +305,8 @@ form input {
 #sportss {
     width: 50%;
     height: 35px;
+    position: relative;
+    bottom: 20px;
 
     font-size: 20px;
     text-align: center;
