--- a/assets/css/newprofile.css
+++ b/assets/css/newprofile.css
@@ -298,7 +298,7 @@ form input {
 }
 
 
-.labelname {
+.labelname ,.labelname1,.labelnametime,.labelnamea,.labelnames{
     font-size: 20px;
     font-weight: 500;
 }
@@ -350,7 +350,22 @@ form input {
     margin-bottom: 5px;
     position: relative;
     background-color: rgba(12, 175, 23, 0.783);
-    left: 163px;
+    margin-left: 160px;
+    /* left: 163px; */
     box-shadow: 0 3px 10px rgb(3, 10, 87);
+
+}
+#checkjoinplayer1{
+    font-size: 10px;
+    position: relative;
+    left: 143px;
+    top: 35px;
+}
+.joinplayer label{
+position: relative;
+left: 150px;
+top: 37px;
+font-size: 20px;
+
 
 }
