--- a/assets/css/groundinfo.css
+++ b/assets/css/groundinfo.css
@@ -565,13 +565,13 @@ input[type="date"] {
 }
 
 .paycash {
-    width: 100%;
-    height: 64px;
+    width: 25%;
+    height: 47px;
     background-color: rgba(91, 173, 37, 0.906);
     font-size: 20px;
     font-weight: bolder;
-
-    padding: 10px 139px;
+color: black;
+    padding: 10px 130px;
 
     cursor: pointer;
     border-radius: 10px;
@@ -655,6 +655,44 @@ p a {
 
 a {
     text-decoration: none;
+}
+
+
+
+/* pop up */
+#popupdivmessage{
+    position: fixed;
+    display: none;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    padding: 170px;
+    border-radius: 5%;
+    background-color: white;
+    border: 1px solid black;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+#yesbtn{
+    display: block;
+    margin: 10px auto;
+    padding: 10px 20px;
+    background-color: green;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+#nobtn{
+    display: block;
+    margin: 10px auto;
+    padding: 10px 20px;
+    width: 20px;
+    height: 15px;
+    background-color: green;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
 /* footer */
