--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -218,7 +218,7 @@ input:invalid{
     /* background-color:  green; */
     /* border-color: rgb(13, 255, 13); */
     background-color: rgb(255, 255, 255);
-    border: none;
+    border:2px solid rgb(255, 44, 44);
     outline: 2px solid rgb(255, 44, 44);
     border-radius: 5px;
     animation: shake 0.2s 2;
