fix: already some  bugs

--- a/assets/css/admindashboard.css
+++ b/assets/css/admindashboard.css
@@ -69,7 +69,7 @@ top: 30px;
     width: 130px;
     height: 30px;
     position: relative;
-    right: 53px;
+    left: 77px;
     bottom: 5px;
     background-color: rgb(83, 146, 198);
     border: none;
