--- a/assets/css/admindashboard.css
+++ b/assets/css/admindashboard.css
@@ -371,7 +371,8 @@ font-size: 20px;
    
     position: fixed;
     display: none;
-    width: 970px;
+    width: 990px;
+    height:800px;
     top: 50%;
     left: 62%;
     transform: translate(-50%,-50%);
@@ -568,4 +569,17 @@ top: 60px;
 
 #amount::-webkit-inner-spin-button{
   -webkit-appearance: none;
+}
+
+#increaseamount::-webkit-inner-spin-button{
+    -webkit-appearance: none;
+  }
+
+#sportscourts,.court{
+    position: relative;
+    right:390px;
+    width: 50px;
+}
+#increaseamount{
+    width: 90px;
 }
