--- a/assets/css/groundinfo.css
+++ b/assets/css/groundinfo.css
@@ -506,7 +506,15 @@ word-break: break-all;
     text-align: center;
     border-radius: 5px;
 }
+.courtss{
+    width: 50%;
+    height: 64px;
 
+    font-size: 20px;
+    text-align: center;
+    border-radius: 5px;
+
+}
 .durations {
     width: 50%;
     height: 64px;
@@ -565,10 +573,10 @@ input[type="date"] {
 }
 
 .paycash {
-    width: 25%;
+    width: 16%;
     height: 47px;
     background-color: rgba(91, 173, 37, 0.906);
-    font-size: 20px;
+    font-size: 24px;
     font-weight: bolder;
 color: black;
     padding: 10px 130px;
