fix: already some  bugs

--- a/assets/css/bookground.css
+++ b/assets/css/bookground.css
@@ -227,34 +227,42 @@ input[type="search"]::placeholder {
 }
 
 .child {
-
-    width: 75%;
-    height: 420px;
-    border-radius: 4%;
-    box-shadow: 0 3px 10px rgb(3, 10, 87);
+padding-bottom: 10px;
+    width: 70%;
+    height: 450px;
+    border-radius: 6px;
+    /* box-shadow: 0 3px 10px rgb(3, 10, 87); */
+    /* box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2); */
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
     margin-left: 13%;
-    /* display: flex; */
-    /* flex-direction: column; */
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: space-evenly;
     cursor: pointer;
     background-color: white;
     color: black;
+    border: 0px solid transparent;
+    box-sizing: border-box;
+
 
 }
 
 .child:hover {
    
-    border: 3px solid rgb(2, 3, 14);
+    border: 0.1px solid rgba(2, 3, 14, 0.45);
         
 }
 /* groundimage */
 .groimg {
-    width: 320px;
+    width: 250px;
     height: 220px;
-    border: 2px solid transparent;
-    border-image: linear-gradient(90deg, rgb(11, 11, 11) 4%, rgb(14, 16, 16) 100%)60;
-    color: rgb(12, 10, 10);
-    margin-left: 15px;
+    /* margin-top: 3px; */
+    /* border: 2px solid transparent; */
+    border-radius: 6px;
+    /* border-image: linear-gradient(90deg, rgb(11, 11, 11) 4%, rgb(14, 16, 16) 100%)60; */
+    /* color: rgb(12, 10, 10); */
+    /* margin-left: 13px; */
  
 }
 /* groundname */
@@ -263,16 +271,17 @@ input[type="search"]::placeholder {
     color: rgb(6, 4, 4);
     font-size: 23px;
     font-weight: bolder;
-    text-align: center;
+    /* text-align: center; */
 
 }
 /* locationname */
 
 .locationn {
     color: rgb(0, 0, 0);
-    font-size: 23px;
+    font-size: 20px;
     font-weight: bolder;
     text-align: center;
+    /* margin-top: 5px; */
 }
 /* sportsicon */
 .sportsicon {
@@ -285,47 +294,47 @@ input[type="search"]::placeholder {
     /* flex-direction: column; */
     flex-direction: row;
     /* justify-content: flex-start; */
-    position: relative;
+    /* position: relative;
     left: 3%;
-    top: 5%;
-    align-content: space-around;
-    align-items: flex-end;
+    top: 5%; */
+    /* align-content: space-around;
+    align-items: flex-end; */
 
 }
 
 .ratings {
     display: flex;
     justify-content: space-around;
-    position: relative;
+    /* border: 1px solid black; */
+    /* position: relative;
     left: 15%;
-    bottom: 5px;
+    bottom: 5px; */
 
 }
+
 /* book button */
 .book {
     font-size: medium;
     padding: 5px 15px;
-    height: 8%;
-    width: 47%;
+    height: 40px;
+    width: 200px;
     background-color: rgb(5, 120, 105);
     color: white;
     font-weight: bold;
     cursor: pointer;
     border: none;
-    position: relative;
+    /* position: relative;
     left: 26%;
-    top:2%;
+    top:2%; */
    
-    border-radius: 10%;
+    border-radius:6px;
 
 }
 
 .fa-star {
     color: rgb(255, 183, 0);
     font-size: 17px;
-    position: relative;
-    left: 150px;
-
+    padding-right: 10px;
 }
 
 .ratingno {
