--- a/assets/css/mybooking.css
+++ b/assets/css/mybooking.css
@@ -112,8 +112,8 @@ ul li a:hover {
 }
 
 .box{
-    background-color: #1994d2;
-    width: 630px;
+    background-color: #8bebdd;
+    width: 670px;
     height: 400px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -126,30 +126,36 @@ ul li a:hover {
 
 .child{
 
-    width: 110%;
-    height: 290px;
+    width: 120%;
+    height: 320px;
     border-radius: 4%;
-    box-shadow: 0 3px 10px rgb(3, 10, 87);
+    /* box-shadow: 0 3px 10px rgb(3, 10, 87); */
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
     align-items: center;
     cursor: pointer;
-    background-color: rgb(155, 25, 25);
+    background-color: rgb(253, 237, 237);
     color: black;
+    position: relative;
+    top: 50px;
+    left: 15px;
+    border: 0px solid transparent;
+    box-sizing: border-box;
 
 }
 
 .child:hover {
    
-    border: 3px solid rgb(2, 3, 14);
+    border: 1px solid rgb(2, 3, 14);
         
 }
 /* groundimage */
 .groimg {
     width: 170px;
-    height: 160px;
+    height: 170px;
     border: 2px solid transparent;
     border-image: linear-gradient(90deg, rgb(11, 11, 11) 4%, rgb(14, 16, 16) 100%)60;
     color: rgb(12, 10, 10);
-    margin-left: 15px;
+    margin-left: 45px;
  
 }
 /* groundname */
@@ -228,12 +234,15 @@ bottom: 20px;
     font-size: 130%;
     font-weight: bold;
     bottom: 3px;
+    right: 10px;
     color: rgb(0, 0, 0);
 }
 
 
 
-
+.groundword{
+    color: #000000;
+}
 
 
 
@@ -245,19 +254,23 @@ bottom: 20px;
     display: grid;
     grid-template-columns: 2fr 2fr;
     grid-template-rows: 12vh;
-    grid-gap: 10px;
-    width:190%;
-    height: 360px;
+    grid-gap: 30px;
+    width:160%;
+    height: 370px;
     background-color: rgb(136, 234, 142);
     position: relative;
-    left: 20px;
+    left: 70px;
+    border-radius: 10px;
+    padding: 10px 10px;
 }
 
-.box1,.box2,.box3,.box4,.box5,.box6,.box7{
-    width: 170px;
+.box1,.box2,.box3,.box4,.box5,.box6,.box7,.box8{
+    width: 150px;
     height: 330px;
-    background-color: #00021a;
+    background-color: #5e6af1;
     color: white;
+    text-align: center;
+    border-radius: 10px;
 }
 #acceptbtn{
     width: 70px;
@@ -280,10 +293,13 @@ bottom: 20px;
 display: flex;
 flex-direction: column;
 gap: 28px;
+position: relative;
+left: 20px;
+
 }
 .column2{
     width: 20px;
-    height: 300px;
+    height: 334px;
     padding: 10px;
  display: flex;
  flex-direction: column;
