--- a/assets/css/findplayers.css
+++ b/assets/css/findplayers.css
@@ -13,9 +13,10 @@ header{
     height: 10vh;
     background-position: center;
     background-size: cover;
-    background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
+    /* background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b); */
     font-family: 'Noto Serif Khojki', serif;
- 
+    background-color:  rgba(32,56,120,255);
+    background-size: cover;
 }
 .checkbtn{
     font-size: 22px;
@@ -82,8 +83,8 @@ ul li a:hover{
     top:0%;
     z-index: 2;
     border: 20px solid;
-    border-image: repeating-linear-gradient(30deg, #00021a, #00080c, #15034a 20px) 60;
-   
+    /* border-image: repeating-linear-gradient(30deg, #00021a, #00080c, #15034a 20px) 60; */
+    border-color: rgba(32,56,120,255);
    
     
     }
@@ -100,8 +101,8 @@ ul li a:hover{
         color: rgb(0, 0, 0);
     }
     .cont3{
-        background-color: rgb(2, 2, 45);
-        border: 5px solid rgb(25, 11, 82);
+        /* background-color: rgb(2, 2, 45); */
+        border: 2px solid  rgba(32,56,120,255);;
         border-radius: 10%;
         width: 6%;
         box-shadow: 0 10px 10px rgba(14, 1, 1, 0.23);
@@ -113,6 +114,7 @@ ul li a:hover{
        bottom: 210px;
        right: 2%;
        height: 102px;
+       
     
         
     }
@@ -204,14 +206,14 @@ input[type="search"]::placeholder{
 .userprofile{
     font-size: 12px;
     padding: 5px 5px;
-    background-color: rgb(5, 120, 47);
+    background-color:  rgba(32,56,120,255);
     color: white;
     font-weight: 600;
     cursor: pointer;
     border: none;
     border-radius: 3px;
     position: relative;
-    top:20px;
+    top:70px;
   
   }
   /* main1 */
@@ -222,9 +224,10 @@ input[type="search"]::placeholder{
    background-color:white;
     overflow: hidden;
     border: 20px solid;
-    border-image: repeating-linear-gradient(30deg, #00021a, #00080c, #15034a 20px) 60;
-   
-    
+    /* border-image: repeating-linear-gradient(30deg, #00021a, #00080c, #15034a 20px) 60;
+    */
+    border-color: rgba(32,56,120,255);
+    background-color: rgba(241, 251, 255, 255);
     }
     .parent{
         margin: 20px;
@@ -236,16 +239,17 @@ input[type="search"]::placeholder{
 
     }
     .child{
-        background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
-        height: 192px;
-        width: 60%;
-        color: white;
+        /* background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b); */
+        height: 232px;
+        width: 80%;
+        color: rgb(255, 255, 255);
         margin-left: 22%;
-        border-radius: 10%;
+        border-radius: 10px;
         display: flex;
         justify-content: center;
         text-align: center;
-       
+        /* background-color: rgba(241, 251, 255, 255); */
+        background-color: rgba(32,56,120,255);
     }
     .visit{
         font-size: medium;
@@ -274,7 +278,7 @@ input[type="search"]::placeholder{
     }
   
     .fa-star{
-        color: goldenrod;
+        color:  #ffcc00;
         font-size: 14px;
         position: relative;
         left: 30px;
@@ -283,8 +287,9 @@ input[type="search"]::placeholder{
         display: flex;
         justify-content: space-between;
         position: relative;
-        left: 37px;
+        /* left: 20px; */
         bottom: 59px;
+        right: 20px;
     
     }
     .ratingno{
@@ -297,6 +302,7 @@ input[type="search"]::placeholder{
       .nameplayer{
         position: relative;
         bottom: 10px;
+        font-size: 17px;
        
     }
     .sportss{
@@ -323,7 +329,7 @@ input[type="search"]::placeholder{
         font-size: 20px;
         position: relative;
         left: 230px;
-        bottom: 130px;
+        bottom: 70px;
     }
 
     /* main2 */
@@ -333,11 +339,11 @@ input[type="search"]::placeholder{
 footer{
     height: 30vh;
 
-    background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
-   
+    /* background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
+    */
     background-size: cover;
     color: white;
-    
+    background-color:  rgba(32,56,120,255);
 }
 .row{
     display: flex;
