--- a/assets/css/admindashboard.css
+++ b/assets/css/admindashboard.css
@@ -584,3 +584,19 @@ top: 60px;
     right: 300px;
 
 }
+
+
+.nj-timepick {
+    position: fixed;
+    right: -100%;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    z-index: 5000;
+    transition: right 0.7s ease;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.8);
+  }
