--- a/assets/css/groundbookingadmin.css
+++ b/assets/css/groundbookingadmin.css
@@ -10,8 +10,9 @@ header {
     height: 12vh;
     background-position: center;
     background-size: cover;
-    background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
+    /* background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b); */
     font-family: 'Noto Serif Khojki', serif;
+    background-color: rgba(32,56,120,255);
 }
 
 
@@ -95,13 +96,13 @@ ul li a:hover {
 
 
 .main2 {
-
+max-height: fit-content;
     /* height: 310vh; */
     /* overflow: hidden; */
     color: white;
     border: 20px solid;
-    border-image: repeating-linear-gradient(30deg, #000000, #01000c, #15034a 20px) 60;
 
+    border-color: rgba(32,56,120,255);
 }
 
 .parent {
@@ -120,12 +121,12 @@ ul li a:hover {
     grid-gap: 50px;
     width: 60%;
     height: 410px;
-    background-color: rgb(136, 234, 142);
+    background-color: rgb(138, 210, 210);
     border-radius: 5px;
 }
 
 .box1,.box2,.box3,.box4,.box5,.box6,.box7,.box8{
-    width: 170px;
+    width: 200px;
     height: 350px;
     background-color: #5e6af1;
     color: white;
@@ -152,10 +153,11 @@ ul li a:hover {
 display: flex;
 flex-direction: column;
 gap: 28px;
+color: #000;
 }
 .column2{
-    width: 170px;
-    height: 342px;
+    width: 190px;
+    height: 352px;
     padding: 10px;
  display: flex;
  flex-direction: column;
@@ -183,8 +185,9 @@ gap: 28px;
 /* footer */
 footer {
     height: 50vh;
+    background-color: rgba(32,56,120,255);
 
-    background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
+    /* background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%); */
 
     background-size: cover;
     color: white;
