--- a/assets/css/groundinfo.css
+++ b/assets/css/groundinfo.css
@@ -10,8 +10,9 @@ header {
     height: 10vh;
     background-position: center;
     background-size: cover;
-    background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
+    /* background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b); */
     font-family: 'Noto Serif Khojki', serif;
+    background-color:  rgba(32,56,120,255);
 }
 
 .checkbtn{
@@ -92,9 +93,9 @@ ul li a:hover {
 /* main2 */
 .main2 {
     height: 175vh;
-    background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
-
-
+    /* background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b); */
+    /* background-color: rgba(241, 251, 255, 255); */
+    background-color: rgba(32,56,120,255);
 }
 
 .bar {
@@ -105,20 +106,20 @@ ul li a:hover {
 }
 
 .sidebar1 {
-    color: white;
+    color: rgb(0, 0, 0);
     margin: 10px 10px;
 
     height: 170vh;
     background-color: rgb(218, 222, 241);
-    border-radius: 2%;
-    background-image: linear-gradient(to top, #d5d7ea, #ffffff, #ffffff, #ffffff, #000833);
+    border-radius: 10px;
+    /* background-image: linear-gradient(to top, #d5d7ea, #ffffff, #ffffff, #ffffff, #000833);
+ */
 
-
-
+ background-color: rgba(241, 251, 255, 255);
 }
 
 .sidebar2 {
-    border-radius: 2%;
+    border-radius: 10px;
     background-color: rgb(218, 222, 241);
     color: white;
     margin: 10px 10px;
@@ -131,7 +132,7 @@ ul li a:hover {
 }
 
 .box1 {
-    color: rgb(253, 251, 251);
+    color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -157,10 +158,11 @@ ul li a:hover {
     position: relative;
     left: 90px;
     top: 30px;
-    border: 5px solid black;
-    background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
+    border: 2px solid rgb(0, 0, 0);
+    /* background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b); */
     color: white;
-
+    /* background-color: rgba(32,56,120,255); */
+    background-color: rgba(241, 251, 255, 255);
 }
 
 .images {
@@ -192,14 +194,14 @@ ul li a:hover {
     margin: 7px;
     border-radius: 50%;
     padding: 5px 5px;
-    border: 1px double rgb(234, 229, 229);
+    border: 1px double rgb(0, 0, 0);
     cursor: pointer;
     transition: all 0.55s ease;
 
 }
 
 .labeldots label:hover {
-    background-color: rgb(228, 226, 226);
+    background-color: rgb(0, 0, 0);
 }
 
 #images1:checked~.groundg1 {
@@ -239,12 +241,13 @@ ul li a:hover {
     position: relative;
     right: 150px;
     top: 20px;
-    background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
-    color: white;
+    /* background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b); */
+    color: rgb(0, 0, 0);
     padding: 0px 15px;
     border-radius: 4%;
-    box-shadow: 0 3px 10px rgb(0, 0, 0);
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
     line-height: 1.6;
+    background-color: rgba(241, 251, 255, 255);
 
 }
 
@@ -273,11 +276,12 @@ ul li a:hover {
     position: relative;
     left: 175px;
     bottom: 195px;
-    background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
-    color: white;
+    /* background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b); */
+    color: rgb(0, 0, 0);
     border-radius: 4%;
-    box-shadow: 0 3px 10px rgb(0, 0, 0);
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
     line-height: 1.6;
+    background-color: rgba(241, 251, 255, 255);
 
 
 }
@@ -302,11 +306,12 @@ ul li a:hover {
     text-align: center;
     position: relative;
     bottom: 160px;
-    background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
-    color: white;
+    /* background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b); */
+    color: rgb(0, 0, 0);
     padding: 25px 10px;
     border-radius: 4%;
-    box-shadow: 0 3px 10px rgb(0, 0, 0);
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+    background-color: rgba(241, 251, 255, 255);
 }
 
 .timinginfo:hover {
@@ -329,12 +334,13 @@ ul li a:hover {
     position: relative;
     bottom: 150px;
     left: 65px;
-    background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
-    color: white;
+    /* background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b); */
+    color: rgb(0, 0, 0);
     padding: 25px 10px;
     border-radius: 4%;
-    box-shadow: 0 3px 10px rgb(0, 0, 0);
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
     line-height: 1.6;
+    background-color: rgba(241, 251, 255, 255);
 
 }
 .rules p{
@@ -370,6 +376,7 @@ word-break: break-all;
     top: 7px;
     border-radius: 10px;
     color: black;
+    border: 2px solid black;
 
 }
 
@@ -384,11 +391,12 @@ word-break: break-all;
     position: relative;
     bottom: 120px;
     left: 265px;
-    background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
-    color: white;
+    background-color: rgba(241, 251, 255, 255);
+    /* background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b); */
+    color: rgb(0, 0, 0);
     padding: 5px 10px;
     border-radius: 4%;
-    box-shadow: 0 3px 10px rgb(0, 0, 0);
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 }
 
 .price:hover {
@@ -400,7 +408,7 @@ word-break: break-all;
 }
 
 .pricen {
-    color: rgb(245, 246, 247);
+    color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -421,7 +429,7 @@ word-break: break-all;
     padding: 10px 30px;
     cursor: pointer;
     border-radius: 10px;
-    box-shadow: 0 3px 10px rgb(110, 107, 124);
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 }
 
 
@@ -447,8 +455,9 @@ word-break: break-all;
     position: relative;
     bottom: 90px;
     left: 70px;
-    background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
-    color: white;
+    background-color: rgba(241, 251, 255, 255);
+    /* background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b); */
+    color: rgb(0, 0, 0);
     padding: 20px 10px;
     border-radius: 4%;
     box-shadow: 0 3px 10px rgb(0, 0, 0);
@@ -465,11 +474,13 @@ word-break: break-all;
 /* sidebar 2 */
 .booking1 {
     width: 730px;
-    height: 120vh;
+    height: 170vh;
     position: relative;
-    bottom: 220px;
-    background-image: linear-gradient(to top, #d5d7ea, #ffffff, #ffffff, #ffffff, #000833);
-
+    bottom: 1px;
+    /* background-image: linear-gradient(to top, #d5d7ea, #ffffff, #ffffff, #ffffff, #000833); */
+    /* background-color:  rgba(32,56,120,255); */
+    background-color: rgba(241, 251, 255, 255);
+    border-radius: 15px;
 
 }
 
@@ -544,7 +555,7 @@ input[type="date"] {
 
 .book1 {
     text-align: center;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 }
 
 .book2 {
@@ -600,8 +611,8 @@ color: black;
 /* footer */
 footer {
     height: 30vh;
-
-    background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
+    background-color:  rgba(32,56,120,255);
+    /* background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%); */
 
     background-size: cover;
     color: white;
