--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,14 @@
     font-family: 'Noto Serif Khojki', serif;
 
 }
+ /* {
+    /* overflow-x: hidden; */
+    
+/* }  */
 
+body{
+    overflow-x: hidden;
+}
 /* header */
 header {
     height: 10vh;
@@ -13,9 +20,11 @@ header {
     position: sticky;
     top: 0%;
     z-index: 2;
+    background-color: rgba(32,56,120,255);
+ 
     /* background-image: linear-gradient(to right top, #ffffff, #ffffff, #ffffff, #ffffff, #f5f5f5);
     background-image: linear-gradient(to right top, #449342, #3f9b8b, #023c18, #2EAF7D, #3FD0C9); */
-    background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b); 
+    /* background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);  */
   
 }
 .checkbtn{
@@ -114,7 +123,7 @@ ul li a:hover {
     background-image: linear-gradient(to right top, #e1edf0, #d5e5ec, #2c8cec, #d0dae3, #5026e7);
 /* 
     background-image: linear-gradient(to right top, #e1edf0, #29d090, #468b31, #3fdc27, #26e733); */
-
+/* overflow-y: hidden; */
 
 }
 
@@ -122,11 +131,11 @@ ul li a:hover {
     font-size: 350%;
     color: rgb(8, 8, 8);
     margin-left: 3.5%;
-    animation: change 7s infinite;
+    /* animation: change 7s infinite; */
 
 }
 
-@keyframes change {
+/* @keyframes change {
     from {
         color: black;
     }
@@ -134,18 +143,136 @@ ul li a:hover {
     to {
         color: white;
     }
-}
+} */
 
 .player1 {
     width: 45%;
     border-radius: 10%;
     margin-right: 3%;
 }
+.maindiv1 {
+    height:89vh;
+    background-color: rgba(241, 251, 255, 255);
+
+}
+.rightgreen {
+    position: relative;
+    left: 55%;
+    /* top:80px; */
+    bottom: 79px;
+}
+
+.leftgreen {
+    position: relative;
+    /* top:80px; */
+    bottom: 79px;
+}
+
+.allsports {
+    position: relative;
+    left: 60px;
+    width: 370px;
+    top: 50px;
+}
+
+.cricketplayer {
+    width: 420px;
+    position: relative;
+    left: 120px;
+    top: 50px;
+}
+
+.connect {
+    position: relative;
+    left: 120px;
+}
+
+.word1 {
+    position: relative;
+    left: 97px;
+    top: 200px;
+    line-height: 2;
+    font-size: 43px;
+}
+
+.center {
+    display: flex;
+}
+
+.leaf {
+    width: 50px;
+}
+
+.lightgreen {
+    position: relative;
+    right: 250px;
+    width: 190px;
+
+
+}
+
+.perbox1 {
+    width: 120px;
+    position: relative;
+    left: 550px;
+    height: 90px;
+    background-color: #deedfb;
+    border-radius: 64px 48px 16px 96px;
+    top: 120px;
+}
+
+.perbox2 {
+    width: 120px;
+    position: relative;
+    left: 630px;
+    height: 90px;
+    background-color: #deedfb;
+    border-radius: 64px 48px 16px 96px;
+    top: 120px;
+}
+
+.perbox3 {
+    width: 120px;
+    position: relative;
+    left: 360px;
+    top: 276px;
+    height: 90px;
+    background-color: #deedfb;
+    border-radius: 64px 48px 16px 96px;
+
+}
+
+.perbox4 {
+    width: 120px;
+    position: relative;
+    left: 420px;
+    height: 90px;
+    background-color: #deedfb;
+    border-radius: 64px 48px 16px 96px;
+    top: 276px;
+}
+
+.box {
+    display: flex;
+}
+
+
+.profilerounds3 {
+    width: 80px;
+    position: relative;
+    left: 20px;
+}
+
+.profilerounds {
+    width: 80px;
+    position: relative;
+    left: 20px;
+}
 
 /* main1 About webpage*/
 
 /* main2 what we do */
-#main2 {
+/* #main2 {
     height: 70vh;
     background-color: white;
 }
@@ -157,8 +284,8 @@ ul li a:hover {
     grid-column-gap: 160px;
     padding-top: 50px;
 
-}
-
+} */
+/* 
 .box {
     width: 102%;
     height: 130%;
@@ -173,9 +300,9 @@ ul li a:hover {
     /* /* background-image: linear-gradient(to right top, #449342, #C1F6ED, #02353C, #2EAF7D, #3FD0C9); */
 
 
-}
+/* } */ 
 
-.cricketicon {
+/* .cricketicon {
     width: 35px;
 }
 
@@ -230,8 +357,262 @@ ul li a:hover {
     position: relative;
     bottom: 21%;
     color: rgb(255, 255, 255);
+} */
+
+
+.maindiv2 {
+    background-color: rgba(241, 251, 255, 255);
+    margin-top: 20px;
+    padding: 20px 80px;
+    height: 700px;
+    border-radius: 10px;
+    width: 1200px;
+     position: relative;
+    left: 50px;
 }
 
+.tagline {
+    font-size: xx-large;
+    color: #072e75;
+    font-weight: bolder;
+    text-align: center;
+  
+}
+
+
+
+.tagbox {
+    background-color: rgba(32,56,120,255);
+    border-radius: 10px;
+    word-wrap: break-word; 
+    max-width: fit-content;
+    height: 380px;
+   
+
+    /* height: 00px; */
+    /* padding: 20px 20px; */
+    
+
+}
+
+.cricketicon {
+    width: 37px;
+    position: relative;
+    top: 87px;
+    left: 120px;
+}
+
+.box-content {
+    color: white;
+    font-size: 17px;
+    position: relative;
+    left: 3%;
+    line-height: 2;
+    word-spacing: 1px;
+    top: 65px;
+    padding: 20px;
+   
+
+
+}
+
+
+
+.groundicon {
+    color: rgb(0, 0, 0);
+    width: 25%;
+    position: relative;
+    top: 10px;
+    left: 130px;
+
+}
+
+.usericon {
+    color: rgb(0, 0, 0);
+    width: 25%;
+    position: relative;
+    top: 10px;
+    left: 120px;
+}
+
+.box-heading1 {
+    font-size: 26px;
+    font-weight: 500;
+    position: relative;
+    top: 60px;
+    color: rgb(255, 255, 255);
+}
+
+.tagmainbox {
+
+
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 50px;
+    height: 350px;
+    padding: 70px;
+
+
+
+}
+
+.design1 {
+    width: 150px;
+    position: relative;
+    right: 70px;
+}
+.maindiv3 {
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+    grid-template-rows: 20px;
+
+    background-color: rgba(241, 251, 255, 255);
+    margin-top: 20px;
+    padding: 20px 80px;
+    height: 500px;
+    border-radius: 10px;
+    width: 1200px;
+    position: relative;
+    left: 50px;
+
+}
+
+.contentcolumn {
+
+    background-color: rgba(32,56,120,255);
+    width: 500px;
+    height: 230px;
+    font-size: 17px;
+    color: #ffffff;
+    border-radius: 20px;
+    position: relative;
+    left: 60px;
+    text-align: center;
+    padding: 10px 30px;
+    top: 150px;
+
+}
+.boldstate{
+    font-size: x-large;
+}
+
+.photocolumn {
+    position: relative;
+    left: 90px;
+    top: 80px;
+}
+
+
+
+.maindiv4 {
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+    grid-template-rows: 20px;
+    background-color: rgba(241, 251, 255, 255);
+    margin-top: 20px;
+    padding: 20px 80px;
+    height: 420px;
+    border-radius: 10px;
+    width: 1200px;
+    position: relative;
+    left: 50px;
+}
+
+.headchat {
+    font-size: 35px;
+    color: #072e75;
+    font-weight: 500;
+
+}
+
+.textcolumn {
+    padding: 80px;
+}
+
+.smallcontent {
+    color: #858f9d;
+    position: relative;
+    top: 10px;
+}
+
+
+
+
+  /* review section */
+  .reviewdiv {
+    background-color: rgba(241, 251, 255, 255);
+      margin-top: 20px;
+      padding: 20px 80px;
+      height: 500px;
+      border-radius: 10px;
+      width: 1200px;
+      position: relative;
+      left: 50px;
+
+
+  }
+  .review{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 50px;
+    height: 380px;
+    padding: 10px;
+    
+
+  }
+
+  .person {
+      border-radius: 10px;
+      background-color: rgba(32,56,120,255);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 10px 45px;
+      color: #ffffff;
+      
+
+
+  }
+
+  .personimg {
+      border-radius: 50%;
+      height: 25px;
+      width: 25px;
+      scale: 1.9;
+      position: relative;
+      bottom: 0px;
+
+  }
+
+  .person p {
+      font-size: 16px;
+  }
+
+  .reviewword {
+      font-size: 10px;
+      position: relative;
+      bottom: 4px;
+      line-height: 2;
+      
+  }
+
+
+  .star {
+      display: flex;
+      justify-content: space-evenly;
+      position: relative;
+     
+  }
+
+  .fa-star {
+      color: rgb(255, 183, 0);
+      font-size: 15px;
+  }
+
+  .fa-star-half-stroke {
+      color: rgb(255, 183, 0);
+      font-size:15px;
+  }
 
 /* main2 */
 
@@ -311,7 +692,7 @@ ul li a:hover {
 /* animation */
 
 /* review section */
-#review {
+/* #review {
     height: 60vh;
     display: flex;
     justify-content: space-evenly;
@@ -353,17 +734,18 @@ ul li a:hover {
 
 .fa-star-half-stroke {
     color: rgb(255, 183, 0);
-}
+} */
 
 /* review sectioin*/
 
 /* footer section */
 footer {
     height: 30vh;
-    background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
+    background-color: rgba(32,56,120,255);
 
     background-size: cover;
     color: white;
+    margin-top: 20px;
 
 }
 
